# tac_plus

./: CONTRIBUTING  LICENSE  README.debian  README.facebook  README.md  tacacs+.spec  tacacs+6.spec  tacacs.spec
F4.0.4.19-fb/: choose_authen.c  configure  default_fn.c  enable.c  md4.h  skey_fn.c
debian-jessie/: fb-tac-plus_4.0.4.19.1-1.debian.tar.xz  fb-tac-plus_4.0.4.19.1-1.dsc  fb-tac-plus_4.0.4.19.1-2.debian.tar.xz  fb-tac-plus_4.0.4.19.1-2.dsc
debian-jessie/debian/: changelog  control  fb-tac-plus.default  install  rules
debian-wheezy/: fb-tac-plus_4.0.4.19.1-1.debian.tar.xz  fb-tac-plus_4.0.4.19.1-1.dsc  fb-tac-plus_4.0.4.19.1-2.dsc
debian-wheezy/debian/: changelog  control  copyright  fb-tac-plus.default  fb-tac-plus.init  install
debian-wheezy/debian/patches/: config-change  series
patches/F4.0.4.28/: fix-logging.patch  pam-error-reporting.patch  proc-limits.patch  remove-perl.patch  systemd.patch  sysv.patch  version.patch
src/: FAQ  INSTALL  authen.c  author.c  client_count.c  config.c  configure  do_author.c  hash.c  maxsess.c  md4.c  programs.c  pwlib.c  regexp.c  regexp.h  regmagic.h  sendauth.c  tac_convert.in  tac_plus.8.in  tac_plus.conf.5.in  tac_plus.sysvinit  tac_plus6.sysvinit  tac_pwd.c  version.h.in
tacacs+-F4.0.4.19/: CHANGES  Makefile.in  acct.c  aclocal.m4  config.h.in  configure.in  default_fn.c  default_v0_fn.c  do_acct.c  do_auth.py  dump.c  encrypt.c  expire.c  expire.h  hash.c  md5.h  mschap.h  parse.c  pathsl.h  pathsl.h.in  pwlib.c  report.c  sendpass.c  tac_plus.c  tac_plus.h  tac_plus.sysvinit  tacacs.h  users_guide.in  utils.c
tacacs+-FB4.0.4.19.1/: CHANGES  Makefile.am  Makefile.in  config.c  configure.in  default_fn.c  do_acct.c  hash_test.c  md5.c  packet.c  parse.c  parse.h  tac_plus.c  tac_plus.h  tac_plus.service  tac_plus.sysvinit  tac_plus6.service  tac_plus6.sysvinit  tac_pwd.8  tacacs.h  utils.c
tacacs-F4.0.4.28/: .gitignore  CHANGES  FAQ  INSTALL  Makefile.am  Makefile.in  acct.c  aceclnt_fn.c  aclocal.m4  authen.c  author.c  choose_authen.c  client_count.c  config.c  config.h.in  configure  configure.ac  default_fn.c  default_v0_fn.c  des_iip.h  des_ip.h  des_key.h  des_s_p.h  do_acct.c  do_auth.py  do_author.c  dump.c  enable.c  encrypt.c  expire.c  expire.h  fdes.c  fdes.h  hash.c  hash_test.c  maxsess.c  maxsessint.c  md4.c  md4.h  md5.c  (+28 more)
tacacs-F4.0.4.28/aconf/: acx_pthread.m4  config.guess  config.sub  libtool.m4  ltmain.sh  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
tacacs-F4.0.4.28/autom4te.cache/: output.0  requests  traces.0  traces.1
